# fm_transaction_service

./: .ci_env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  template.env
.github/workflows/: docker-image-dev.yml
bamboo-specs/: bamboo.yaml  service-b-perms.yaml  service-b.yaml
bamboo-specs/deployment-environments/: dev-stand-1.yml  master-stand-1.yml  master-stand-deb.yml  rc-stand-1.yml  release-stand-1.yml
bamboo-specs/jobs/: build_sanity_check.yml  fill_pypi_arti_job.yml  lint_backend_job.yml  publish_backend_job.yml  reqs_ser_build_job.yml  run_behave_tests.yml  run_unit_tests.yml
bamboo-specs/perms/: build.yml  deploy.yml
bamboo-specs/plans/: build.yml  deploy.yml
bamboo-specs/scripts/: build_pre_cached_image.sh  deploy_deb_script.yml  deploy_deb_script_with_envs.yml  deploy_script.yml  docker_push_registry.sh  dramatiq_up.sh  fill_pypi_arti.sh  final_behave_tests.yml  final_docker_compose_unit_test.sh  final_req_script.sh  final_script.sh  lint_sanity_chk.sh  publish_backend_job.sh  run_behave_tests.yml  run_unit_tests.sh  run_unit_tests_compose.sh  scheduler_up.sh  uvicorn_up.sh
bamboo-specs/tasks/: deploy_ci_env-scp.yml  deploy_deb_ssh.yml  deploy_deb_ssh_with_envs.yml  deploy_ssh.yml  dramatiq_build.yml  dramatiq_up.yml  final_behave_tests.yml  inject-vars-dev.yml  inject-vars-master.yml  inject-vars-rc.yml  inject-vars-release.yml  run_behave_tests.yml  scheduler_build.yml  scheduler_up.yml  skip-build-condition.yml  skip-deb-publish-condition.yml  uvicorn_build.yml  uvicorn_up.yml
bamboo-vars/: .env-common  .env-dev  .env-master  .env-rc  .env-release
bamboo-vars/release.stand.acm-team.astralinux.ru/: .ci_env
debian/: changelog  control  cookiecutter.json  python-template-jobs.service  python-template-scheduler.service  python-template.logrotate  python-template.postinst  python-template.service  rules
docker/: .docker_env  Dockerfile  README.md  docker-compose.yml
docker/modules/: Makefile  requirements-acm.in  requirements-common.in  requirements-dev.in  requirements-migrations.in  requirements.in  testing.env
docker/modules/jobs/: requirements.in
docker/modules/web/: requirements.in
docs/: ER-diagram.drawio  task_tracker.txt
scripts/: alembic_migration_helper.sh  dephell.sh  linters.sh  uvicorn_up.sh
src/: Makefile  alembic.ini
src/apps/: config.py
src/apps/apps_types/: __init__.py  transaction.py
src/apps/db_models/: __init__.py  base.py
src/apps/db_models/models/: categories.py  transactions.py  users.py
src/apps/db_models/utils/: types.py
src/apps/jobs/: config.py  main.py  scheduler.py
src/apps/jobs/app/handlers/: deps.py
src/apps/jobs/app/handlers/jobs/: __init__.py  echo_msg_task.py  job_decorator.py
src/apps/jobs/app/infrastructure/db/repos/: base.py
src/apps/jobs/bootstrap/: logger.py  scheduler.py
src/apps/jobs/connectors/: postgres.py  rmq.py
src/apps/utils/: schemas.py
src/apps/web/: config.py  main.py  router.py  security.py
src/apps/web/app/aggregators/models/category/: __init__.py  category.py
src/apps/web/app/aggregators/models/transaction/: transaction.py
src/apps/web/app/aggregators/models/user/: user.py  user_categories.py  user_transactions.py
src/apps/web/app/application/commands/: unit_of_work.py
src/apps/web/app/application/commands/transaction/: create.py  delete.py  exceptions.py  patch.py  uow.py
src/apps/web/app/application/queries/: base.py
src/apps/web/app/application/queries/user/: queries.py
src/apps/web/app/handlers/: deps.py
src/apps/web/app/handlers/api/: schemas.py
src/apps/web/app/handlers/api/v1/: tasks.py
src/apps/web/app/handlers/events/: base.py  dispatcher.py  exceptions.py  handlers_mappers.py
src/apps/web/app/utils/: datetime_tz.py  exceptions.py
src/apps/web/bootstrap/: dramatiq.py  exception_handlers.py  logger.py
src/apps/web/bootstrap/metrics/: metrics.py  setup.py
src/apps/web/bootstrap/rmq/: connection.py  consumers.py  rmq_cluster.py  setup.py
src/apps/web/connectors/: postgres.py
src/apps/web/exception_handlers/: base.py  forbidden_error.py  not_found_error.py  server_error.py  unauthorized_error.py  validation_error.py
src/apps/web/telemetry/: logging_tools.py
src/migrations/: env.py
src/migrations/versions/: 2025_02_03_2022-fb6814798e01_create_tables.py  2025_02_07_1243-ac2845977f5f_union_income_outcome_to_transactions.py  2025_10_30_1246-32a341877513_init.py
src/modules/db_models/: __init__.py
src/modules/db_models/models/: categories.py  incomes.py  outcomes.py  test_table.py  transactions.py  users.py
src/modules/db_models/utils/: types.py
src/modules/jobs/: main.py  scheduler.py
src/modules/jobs/app/handlers/: deps.py
src/modules/jobs/app/handlers/jobs/: echo_msg_task.py  job_decorator.py
src/modules/jobs/app/utils/: exceptions.py
src/modules/jobs/bootstrap/: logger.py  scheduler.py
src/modules/jobs/connectors/: postgres.py
src/modules/types/: __init__.py  simple_types.py
src/modules/utils/: schemas.py
src/modules/web/: config.py  logger.py  main.py  router.py  security.py
src/modules/web/app/aggregators/models/category/: category.py
src/modules/web/app/aggregators/models/user/: user.py  (+4 more)
src/modules/web/app/aggregators/types/: __init__.py  simple_types.py
src/modules/web/app/application/commands/: unit_of_work.py
src/modules/web/app/application/queries/: base.py
src/modules/web/app/handlers/: deps.py
src/modules/web/app/handlers/api/: schemas.py
src/modules/web/app/handlers/events/: base.py  dispatcher.py  exceptions.py  handlers_mappers.py
src/modules/web/bootstrap/: dramatiq.py  exception_handlers.py  logger.py
src/modules/web/bootstrap/metrics/: metrics.py
src/modules/web/bootstrap/rmq/: __init__.py  connection.py  consumers.py  rmq_cluster.py  setup.py
src/modules/web/connectors/: postgres.py  rmq.py
src/modules/web/exception_handlers/: base.py  forbidden_error.py  not_found_error.py  server_error.py  unauthorized_error.py  validation_error.py
src/tests/jobs/: test_healthy.py
(+35 files in other folders)
